--- a/components/ui/songControl/control.css
+++ b/components/ui/songControl/control.css
@@ -26,7 +26,7 @@
     width: 0px;
     height: 0px;
     border-radius: 50px;
-    background-color: white;
+    background-color: rgb(49, 49, 49);
   }
 
   #volume-bar:hover::-webkit-slider-thumb{
