--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,48 @@
 
 
 
+/*  */
+
+
+:root{
+  /* --shadow : 3px 3px 6px #bababa,-3px -8px 6px #ffffff; */
+  --shadow : inset 6px 6px 12px #bababa, inset -6px -6px -12px #ffffff;
+}
+.out-shadow{
+  box-shadow: 2px 2px 6px #bababa,-3px -3px 5px #ffffff;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
+}
+
+.out-shadow:active{
+  box-shadow: #bababa 1px 1px 6px 0px inset, rgba(255, 255, 255, 0.5) -2px -3px 6px 1px inset;
+
+}
+.in-shadow{
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;;
+}
+
+.inner-shadow{
+  box-shadow: #bababa 1px 1px 6px 0px inset, rgba(255, 255, 255, 0.5) -2px -3px 6px 1px inset;
+}
+
+.touch-element:hover ~ .cursor{
+  width: 100px;
+  height: 100px;
+}
+
+.scroll::-webkit-scrollbar{
+  width: 100px;
+  height: 8px;
+  background-color: transparent;
+}
+.scroll::-webkit-scrollbar-track{
+  background-color: #ddd;
+  border-radius: 10px;
+}
+.scroll::-webkit-scrollbar-thumb{
+  background-color: hotpink;
+  border-radius: 10px;
+}
+.active{
+  color: hotpink;
+}
